--- a/src/Compilers/Core/Portable/project.json
+++ b/src/Compilers/Core/Portable/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "supports": {},
   "dependencies": {
-    "Microsoft.DiaSymReader.Native": "1.2.0-rc",
+    "Microsoft.DiaSymReader.Native": "1.3.0",
     "System.Collections.Immutable": "1.1.37",
     "System.Reflection.Metadata": "1.1.0-beta-23413"
   },
