--- a/src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
+++ b/src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
@@ -454,6 +454,7 @@
     <Compile Include="Lowering\LocalRewriter\LoweredDynamicOperation.cs" />
     <Compile Include="Lowering\LocalRewriter\LoweredDynamicOperationFactory.cs" />
     <Compile Include="Lowering\MethodGroupConversionRewriter\MethodGroupConversionCacheFrame.cs" />
+    <Compile Include="Lowering\MethodGroupConversionRewriter\MethodGroupConversionCacheFrameConstructor.cs" />
     <Compile Include="Lowering\MethodGroupConversionRewriter\MethodGroupConversionRewriter.cs" />
     <Compile Include="Lowering\MethodToClassRewriter.cs" />
     <Compile Include="Lowering\StateMachineRewriter\CapturedSymbol.cs" />
