--- a/src/Compilers/Core/Portable/CodeAnalysis.csproj
+++ b/src/Compilers/Core/Portable/CodeAnalysis.csproj
@@ -73,6 +73,7 @@
     <Compile Include="InternalUtilities\StreamExtensions.cs" />
     <Compile Include="PEWriter\MetadataBuilder.cs" />
     <Compile Include="PEWriter\MetadataTablesBuilder.cs" />
+    <Compile Include="PEWriter\PESizes.cs" />
     <Compile Include="RealParser.cs" />
     <Compile Include="ReferenceManager\MergedAliases.cs" />
     <Compile Include="StrongName\CryptoBlobParser.cs" />
