--- a/src/Compilers/Core/Portable/CodeAnalysis.csproj
+++ b/src/Compilers/Core/Portable/CodeAnalysis.csproj
@@ -75,7 +75,7 @@
     <Compile Include="PEWriter\CodedIndex.cs" />
     <Compile Include="PEWriter\MetadataBuilder.cs" />
     <Compile Include="PEWriter\MetadataTablesBuilder.cs" />
-    <Compile Include="PEWriter\MetadataUtilities.cs" />
+    <Compile Include="PEWriter\MetadataWriterUtilities.cs" />
     <Compile Include="PEWriter\PESizes.cs" />
     <Compile Include="RealParser.cs" />
     <Compile Include="ReferenceManager\MergedAliases.cs" />
