Provide the SyntacticTagger's AdhocWorkspace with a proper MEF host
The syntactic classification tagger was creating a AdhocWorkspace when the
buffer being tagged was otherwise attached to a real workspace. It was creating
one with the default constructor, which in Visual Studio does not use the
Visual Studio MEF composition but rather creates it's own. This causes more
assemblies to be loaded than we would like since it does not have any caching.
The fix is to create a HostServices that does get it's exports from the Visual
Studio MEF composition.

--- a/src/EditorFeatures/Core/EditorFeatures.csproj
+++ b/src/EditorFeatures/Core/EditorFeatures.csproj
@@ -654,6 +654,7 @@
     <Compile Include="Implementation\TodoComment\TodoCommentTokens.cs" />
     <Compile Include="Implementation\Workspaces\EditorErrorReportingService.cs" />
     <Compile Include="Implementation\Workspaces\EditorErrorReportingServiceFactory.cs" />
+    <Compile Include="Implementation\Workspaces\MefHostServicesFactoryService.cs" />
     <Compile Include="Implementation\Workspaces\ProjectCacheServiceFactory.cs" />
     <Compile Include="Implementation\Workspaces\EditorTextFactoryService.cs" />
     <Compile Include="Implementation\Workspaces\ProjectCacheService.cs" />
