Respond to code review feedback: - clean up IDkmClrFormatter.GetValueString() hook - Remove CollectionExtensions.cs, since it's not needed anymore - Remove temporary internalsVisibleTo declaration, replacing it with a real one, using the real public key, the way we want to ship with

--- a/src/ExpressionEvaluator/Core/Source/ResultProvider/Portable/ResultProvider.Portable.csproj
+++ b/src/ExpressionEvaluator/Core/Source/ResultProvider/Portable/ResultProvider.Portable.csproj
@@ -81,6 +81,9 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleToMCppEE Include="MCppEE" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' " />
   <ItemGroup>
