--- a/src/Compilers/Core/Portable/CodeAnalysis.csproj
+++ b/src/Compilers/Core/Portable/CodeAnalysis.csproj
@@ -73,7 +73,7 @@
     <Compile Include="InternalUtilities\StackGuard.cs" />
     <Compile Include="InternalUtilities\StreamExtensions.cs" />
     <Compile Include="PEWriter\CodedIndex.cs" />
-    <Compile Include="PEWriter\MetadataBuilder.cs" />
+    <Compile Include="PEWriter\MetadataSerializer.cs" />
     <Compile Include="PEWriter\MetadataTablesBuilder.cs" />
     <Compile Include="PEWriter\MetadataWriterUtilities.cs" />
     <Compile Include="PEWriter\PESizes.cs" />
