Prototype #references, #files, and #imports
`#references` - referenced assemblies
`#files` - loaded files
`#imports` - imported namespaces/types/aliases

They should work in both csi and the C# interactive window.  All but
`#imports` should also work in VB, to the extent that VB works at all.

Caveat: `#references` will not show references inherited from previous
submissions until https://github.com/dotnet/roslyn/issues/6587 is fixed.

--- a/src/Interactive/EditorFeatures/CSharp/CSharpInteractiveEditorFeatures.csproj
+++ b/src/Interactive/EditorFeatures/CSharp/CSharpInteractiveEditorFeatures.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Interactive\CSharpInteractiveEvaluator.cs" />
     <Compile Include="Interactive\CSharpReplServiceProvider.cs" />
+    <Compile Include="Interactive\ImportsCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.CoreUtility, Version=$(VisualStudioReferenceAssemblyVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
