--- a/src/Interactive/EditorFeatures/Core/InteractiveEditorFeatures.csproj
+++ b/src/Interactive/EditorFeatures/Core/InteractiveEditorFeatures.csproj
@@ -107,7 +107,7 @@
     <InternalsVisibleTo Include="Microsoft.CodeAnalysis.VisualBasic.InteractiveEditorFeatures" />
     <InternalsVisibleTo Include="Microsoft.VisualStudio.CSharp.Repl" />
     <InternalsVisibleTo Include="Microsoft.VisualStudio.VisualBasic.Repl" />
-    <InternalsVisibleTo Include="Microsoft.VisualStudio.InteractiveServices" />    
+    <InternalsVisibleTo Include="Microsoft.VisualStudio.InteractiveServices" />
     <!-- The rest are for test purposes only. -->
     <InternalsVisibleToTest Include="Roslyn.Hosting.Diagnostics" />
     <InternalsVisibleToTest Include="Roslyn.InteractiveHost.UnitTests" />
@@ -129,10 +129,13 @@
     <Compile Include="Completion\GlobalAssemblyCacheCompletionHelper.cs" />
     <Compile Include="Completion\AbstractReferenceDirectiveCompletionProvider.cs" />
     <Compile Include="Completion\AbstractReferenceDirectiveCompletionProvider.ItemRules.cs" />
-    <Compile Include="Extensibility\Interactive\CSharpVBResetCommand.cs" />
+    <Compile Include="Extensibility\Interactive\FilesCommand.cs" />
+    <Compile Include="Extensibility\Interactive\InteractiveCommandHelpers.cs" />
+    <Compile Include="Extensibility\Interactive\ReferencesCommand.cs" />
+    <Compile Include="Extensibility\Interactive\ResetCommand.cs" />
     <Compile Include="Extensibility\Interactive\InteractiveCommandHandler.cs" />
     <Compile Include="Extensibility\Interactive\InteractiveEvaluator.cs" />
-    <Compile Include="Extensibility\Interactive\CSharpVBInteractiveCommandContentTypes.cs" />
+    <Compile Include="Extensibility\Interactive\InteractiveCommandContentTypes.cs" />
     <Compile Include="Implementation\Completion\InteractiveCommandCompletionService.cs" />
     <Compile Include="Implementation\Completion\Presentation\CompletionPresenter.cs" />
     <Compile Include="Implementation\Interactive\InertClassifierProvider.cs" />
