--- a/src/Workspaces/CoreTest.Desktop/ServicesTest.Desktop.csproj
+++ b/src/Workspaces/CoreTest.Desktop/ServicesTest.Desktop.csproj
@@ -89,6 +89,8 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeCleanup\FixIncorrectTokenTests.cs" />
+    <Compile Include="CodeCleanup\ReduceTokenTests.cs" />
     <Compile Include="WorkspaceTests\MSBuildWorkspaceTests.cs" />
     <Compile Include="WorkspaceTests\MSBuildWorkspaceTestBase.cs" />
   </ItemGroup>
