Move more tests -> .Desktop
This includes tests for CommandLineProject, Solution, and
TemporaryStorageServiceTests.

We should try to move some of the Solution tests back, though, as Solution
isn't actually a Desktop-exclusive type.

Also, there's a test in AdhocWorkspaceTests that I commented out because I
couldn't think of a good name for a class/file to put it in on the .Desktop
side.

--- a/src/Workspaces/CoreTest.Desktop/ServicesTest.Desktop.csproj
+++ b/src/Workspaces/CoreTest.Desktop/ServicesTest.Desktop.csproj
@@ -92,6 +92,9 @@
     <Compile Include="UtilityTest\FilePathUtilitiesTests.cs" />
     <Compile Include="CodeCleanup\FixIncorrectTokenTests.cs" />
     <Compile Include="CodeCleanup\ReduceTokenTests.cs" />
+    <Compile Include="SolutionTests\SolutionTests.cs" />
+    <Compile Include="WorkspaceServiceTests\TemporaryStorageServiceTests.cs" />
+    <Compile Include="WorkspaceTests\CommandLineProjectTests.cs" />
     <Compile Include="WorkspaceTests\MSBuildWorkspaceTests.cs" />
     <Compile Include="WorkspaceTests\MSBuildWorkspaceTestBase.cs" />
   </ItemGroup>
