[Compiler VB CommandLine] Introduce a Mutable version of VBCommandLineArguments, which enables us to refactor the argument parser, into seperate functions. Move the job of producing the immutable version into a function within the Mutable version.

--- a/src/Compilers/VisualBasic/Portable/BasicCodeAnalysis.vbproj
+++ b/src/Compilers/VisualBasic/Portable/BasicCodeAnalysis.vbproj
@@ -321,6 +321,7 @@
     <Compile Include="CodeGen\Optimizer\StackScheduler.LocalDefUseSpan.vb" />
     <Compile Include="CodeGen\Optimizer\StackScheduler.Rewriter.vb" />
     <Compile Include="CodeGen\Optimizer\StackScheduler.vb" />
+    <Compile Include="CommandLine\Mutable_VBCommandLineArguments.vb" />
     <Compile Include="CommandLine\VisualBasicCommandLineArguments.vb" />
     <Compile Include="CommandLine\CommandLineDiagnosticFormatter.vb" />
     <Compile Include="CommandLine\VisualBasicCommandLineParser.vb" />
