--- a/src/EditorFeatures/VisualBasicTest/BasicEditorServicesTest.vbproj
+++ b/src/EditorFeatures/VisualBasicTest/BasicEditorServicesTest.vbproj
@@ -436,6 +436,7 @@
     <Compile Include="Recommendations\PreprocessorDirectives\ElseIfDirectiveKeywordRecommenderTests.vb" />
     <Compile Include="Recommendations\PreprocessorDirectives\LoadDirectiveKeywordRecommenderTests.vb" />
     <Compile Include="Recommendations\PreprocessorDirectives\ReferenceDirectiveKeywordRecommenderTests.vb" />
+    <Compile Include="Recommendations\PreprocessorDirectives\ShebangDirectiveRecommenderTests.vb" />
     <Compile Include="Recommendations\PreprocessorDirectives\WarningDirectiveKeywordRecommenderTests.vb" />
     <Compile Include="Recommendations\PreprocessorDirectives\EndIfDirectiveKeywordRecommenderTests.vb" />
     <Compile Include="Recommendations\PreprocessorDirectives\EndRegionDirectiveKeywordRecommenderTests.vb" />
