--- a/src/Features/VisualBasic/Portable/BasicFeatures.vbproj
+++ b/src/Features/VisualBasic/Portable/BasicFeatures.vbproj
@@ -159,6 +159,7 @@
     <Compile Include="Completion\CompletionProviders\SymbolCompletionProvider.ItemRules.vb" />
     <Compile Include="Completion\KeywordRecommenders\PreprocessorDirectives\ReferenceDirectiveKeywordRecommender.vb" />
     <Compile Include="Completion\KeywordRecommenders\PreprocessorDirectives\LoadDirectiveKeywordRecommender.vb" />
+    <Compile Include="Completion\KeywordRecommenders\PreprocessorDirectives\ShebangDirectiveRecommender.vb" />
     <Compile Include="Completion\SuggestionMode\VisualBasicSuggestionModeCompletionProvider.vb" />
     <Compile Include="Completion\CompletionProviders\SymbolCompletionProvider.vb" />
     <Compile Include="Completion\KeywordRecommenders\AbstractKeywordRecommender.vb" />
