Modify rename to always annotate symbol declarations that were renamed. This allows IVsRefactorNotify to be handled automatically when calling Solution.TryApplyChanges

--- a/src/VisualStudio/Core/Def/Microsoft.VisualStudio.LanguageServices.csproj
+++ b/src/VisualStudio/Core/Def/Microsoft.VisualStudio.LanguageServices.csproj
@@ -273,5 +273,8 @@
   <ItemGroup>
     <VsdConfigXmlFiles Include="ManagedEditAndContinueService.vsdconfigxml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Implementation\DocumentRefactoring\" />
+  </ItemGroup>
   <Import Project="$(RepositoryEngineeringDir)targets\Vsdconfig.targets" />
 </Project>
